--- a/templates/elasticbeanstalk-sample.template.yaml
+++ b/templates/elasticbeanstalk-sample.template.yaml
@@ -312,3 +312,6 @@ Outputs:
       - CreateNewBeanstalkEnv
       - !GetAtt 'BeanstalkEnvironment.EndpointURL'
       - ''
+  GreenEnvironmentName:
+    Description: Green environment name
+    Value: !Ref GreenEnvironmentName
