--- a/templates/copyfunction-to-s3bucket.template.yaml
+++ b/templates/copyfunction-to-s3bucket.template.yaml
@@ -22,7 +22,7 @@ Parameters:
     ConstraintDescription: Quick Start bucket name can include numbers, lowercase
       letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen
       (-).
-    Default: aws-ia-us-east-1
+    Default: aws-ia
     Description: S3 bucket name for the Quick Start assets. Quick Start bucket name
       can include numbers, lowercase letters, uppercase letters, and hyphens (-).
       It cannot start or end with a hyphen (-).
@@ -37,7 +37,7 @@ Parameters:
       forward slash (/).
     Type: String
 Conditions:
-  UsingDefaultBucket: !Equals [!Ref QSS3BucketName, 'aws-ia-us-east-1']
+  UsingDefaultBucket: !Equals [!Ref QSS3BucketName, 'aws-ia']
   CreateBucketForBeanstalkSource: !And
     - !Equals
       - !Ref 'BeanstalkSourceStageS3BucketName'
