--- a/.gitmodules
+++ b/.gitmodules
@@ -3,5 +3,5 @@
 	url = https://github.com/aws-ia/aws-ia-documentation-base-common.git
 [submodule "submodules/cfn-ps-git2s3"]
 	path = submodules/cfn-ps-git2s3
-	url = git@github.com:aws-ia/cfn-ps-git2s3.git
+	url = https://github.com/aws-ia/cfn-ps-git2s3.git
 	branch = main
